# MacaqueNormativeModeling

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: README.md  generate_example_data.py
examples/site-ohsu/: README.md  run_finetune_predict.sh
examples/site-ohsu/merged_stats/cort/M129/L/: area.csv  cortvol.csv  curvature.csv  sulc.csv  thickness.csv
examples/site-ohsu/merged_stats/cort/M129/R/: area.csv  cortvol.csv  curvature.csv  sulc.csv  thickness.csv
examples/site-ohsu/merged_stats/cort/M132/L/: area.csv  cortvol.csv  curvature.csv  sulc.csv  thickness.csv
examples/site-ohsu/merged_stats/cort/M132/R/: area.csv  cortvol.csv  curvature.csv  sulc.csv  thickness.csv
examples/site-ohsu/merged_stats/cort/MBNA124/L/: area.csv  cortvol.csv  curvature.csv  sulc.csv  thickness.csv
examples/site-ohsu/merged_stats/cort/MBNA124/R/: area.csv  cortvol.csv  curvature.csv  sulc.csv  thickness.csv
examples/site-ohsu/merged_stats/cort/Modalities/L/: area.csv  cortvol.csv  curvature.csv  sulc.csv  thickness.csv
examples/site-ohsu/merged_stats/cort/Modalities/R/: area.csv  cortvol.csv  curvature.csv  sulc.csv  thickness.csv
examples/site-ohsu/merged_stats/subcort/aseg/L/: volume.csv
gpr_normative/: __init__.py  blr_fine_tune.py  blr_predict.py  blr_train.py  combat.py  data_utils.py  evaluate.py  fine_tune.py  model_hub.py  predict.py  train.py
monkey_normative/: __init__.py  blr.py  cli.py  combat.py  constants.py  data.py  metrics.py  predict.py
notebooks/: example_usage.ipynb
scripts/: upload_models_to_hf.py
tests/: test_core.py
(+1 files in other folders)
