[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "gpr_normative"
version = "1.0.0"
description = "Gaussian Process Regression for brain normative modeling"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.21",
    "pandas>=1.3",
    "scipy>=1.7",
    "scikit-learn>=1.0",
    "joblib>=1.1",
]

[project.scripts]
gpr-train = "gpr_normative.train:main"
gpr-predict = "gpr_normative.predict:main"
gpr-evaluate = "gpr_normative.evaluate:main"
gpr-fine-tune = "gpr_normative.fine_tune:main"
