[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "monkey-normative"
version = "0.1.0"
description = "BLR normative modeling pipeline for macaque brain MRI tables"
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy>=1.21",
    "pandas>=1.3",
    "scipy>=1.7",
    "scikit-learn>=1.0",
    "joblib>=1.1",
]

[project.optional-dependencies]
blr = ["pcntoolkit"]
combat = ["neuroHarmonize"]

[project.scripts]
monkey-norm = "monkey_normative.cli:main"

[tool.setuptools.packages.find]
where = ["."]
